<resources>
    <string name="app_name">Call Reminder</string>
    <string name="list_name">List of calls</string>
    <string name="add_note_text">Add a new call</string>
    <string name="empty_list_text">No call</string>
    <string name="delete_note_text">Delete the note</string>
    <string name="save_note_text">Save</string>
    <string name="note_title_text">Title</string>
    <string name="note_descr_text">Description</string>
    <string name="note_phone_text">Phone number</string>
    <string name="note_time_text">Call time</string>
    <string name="note_date_text">Call date</string>
    <string name="select_contact_text">Contacts</string>
    <string name="make_call_text">Call</string>
    <string name="complete_call_text">Ready</string>
    <string name="empty_field_warning_text">Please, type a title.</string>
    <string name="no_contact_text">No contact</string>
    <string name="read_contacts_permission_rejection_text">Permission to read contacts
        is not granted. You can change it in app settings.</string>
    <string name="post_notifications_permission_rejection_text">Permission to post notifications
        is not granted. You can change it in app settings.</string>
    <string name="search_hint">Search contacts</string>
</resources>