<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.NoteActivity">

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@null"
        android:hint="@string/note_title_text"
        android:inputType="textMultiLine"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/note_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@null"
        android:gravity="top"
        android:hint="@string/note_descr_text"
        android:inputType="textMultiLine"
        android:minHeight="80dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/note_phone"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/note_phone_text"
            android:inputType="phone"
            android:textSize="24sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_contact_text"
            android:onClick="onClick"
            android:src="@drawable/outline_contact_page_24"
            app:maxImageSize="40dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:hint="@string/note_date_text"
        android:onClick="onClick"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/note_time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:hint="@string/note_date_text"
        android:onClick="onClick"
        android:textSize="24sp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/save_note_text"
        android:textSize="24sp" />
</LinearLayout>